<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentCoffee">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/tvCountCoffee"
        android:textSize="36sp" />

    <Button
        android:id="@+id/buttonLeft"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginRight="60dp"
        android:text="@string/strzałkaLewo"
        android:textStyle="bold"
        android:background="@drawable/app_background"/>

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:text="@string/startNumber"
        android:textSize="36sp" />

    <Button
        android:id="@+id/buttonRight"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="150dp"
        android:text="@string/strzałkaPrawo"
        android:textStyle="bold"
        android:background="@drawable/app_background"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:src="@drawable/coffee" />
</FrameLayout>